change to use `isBlank()` rather than `trim().isEmpty()`